--- a/Landing Pages/about.html
+++ b/Landing Pages/about.html
@@ -13,7 +13,7 @@
 
 <!-- About Header -->
 <div class="aboutHeader">
-	<h2 style="text-align: center;">About True Fabrications</h2>
+	<h2 style="text-align: center;"><a href="/about">About True Fabrications</a></h2>
 	<nav>
 		<ul>
 		<a href="/who"><li class="whoLink">WHO WE ARE</li></a><a href="/guarantee"><li class="guaranteeLink" style="margin-left: 10%; margin-right: 10%;">OUR GUARANTEES</li></a><a href="/about-brands"><li class="brandsLink">OUR BRANDS</li></a>
@@ -21,7 +21,7 @@
 	</nav>
 </div>
 <!-- End Header -->
-<div class="tfThreePanelsContainer">
+<div class="tfPanelsContainer">
 	<div class="tfThreePanels">
 		<img src="/assets/images/content/CD_pages/true_who_1.png" />
 	</div>
@@ -35,8 +35,12 @@
 </div>
 <div style="width: 80%; min-width: 300px; margin: auto;">
 <h3 style="font-size: 1.5em; text-align: center">Our Mission Statement</h3>
-<p style="text-align: center">Since 2015 True Fabrications is the leading designer and supplier of beverage lifestyle accessories worldwide. From our headquarters in Seattle, Washington we offer the very best on-trend products and branding at the best prices on the market. Our company is anchored by an innovative, future-driven product development team, cutting-edge in-house design and customization departments, sales representatives specialized in everything from national grocery chains to family-owned wineries, and the finest customer service team in the industry. </p>
-<p style="text-align: center">To top it all off, everything we do is backed by our <B>100% Satisfaction Guarantee</B>. We hope you’ll become one of our thousands of loyal customers, and we look forward to building a thriving, long-lasting relationship with you and your business.
+<p style="text-align: center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </p>
 </div>
 </section>
