--- a/Landing Pages/catalog.html
+++ b/Landing Pages/catalog.html
@@ -102,15 +102,15 @@
 
   <div class="catalogRow">
     <div class="catalogImage">
-  	 <a href="http://catalog.truefabrications.com/pdf/viewer/?file=../winter2014.pdf"><img src="http://www.truefabrications.com/catalog/00_W14_Cover.jpg" style="border: solid 2px #c3c3c3;" /></a>
+  	 <a href="http://catalog.truefabrications.com/pdf/viewer/?file=../spring2015.pdf"><img src="http://www.truefabrications.com/catalog/web_cover_S15.jpg" style="border: solid 2px #c3c3c3;" /></a>
     </div>
     <div class="catalogText">
-     <h1>The <span class="catalogName">WINTER 2014 CATALOG</span> is here!</h1>
-     <p>At last, it's time for more than just a glimpse. We're celebrating 10 years with hundreds of new & innovative products, curated collections, and everyday essentials.</p>
+     <h1>The <span class="catalogName">SPRING 2015 CATALOG</span> is here!</h1>
+     <p>Spring has sprung at True Fabrications! Check out over 200 new products, curated collections, and everyday essentials in the 2015 Spring Catalog.</p>
      <h2>Get Yours:</h2>
       <ul>
-        <li><a href="http://catalog.truefabrications.com/pdf/viewer/?file=../winter2014.pdf">View Online</a></li>
-        <li><a href="http://catalog.truefabrications.com/pdf/winter2014.pdf">Download (PDF)</a></li>
+        <li><a href="http://catalog.truefabrications.com/pdf/viewer/?file=../spring2015.pdf">View Online</a></li>
+        <li><a href="http://catalog.truefabrications.com/pdf/spring2015.pdf">Download (PDF)</a></li>
         <li><a href="http://www.truefabrications.com/requestcatalog.asp">Request a Copy (via US Mail)</a></li>
       </ul>
     </div>
