--- a/Landing Pages/contact.html
+++ b/Landing Pages/contact.html
@@ -1,8 +1,5 @@
 <head>
 
-     <title>True Fabrications | Customer Support
-    </title>
-
 <link rel="stylesheet" href="/assets/tf-styles/landingPages.css"></link>
 
 
@@ -47,7 +44,7 @@
 
     .tfFooterPanels{
       width: 100%;
-      text-align: center;
+      text-align: justify;
       display: inline-block;
       height: 100%;
       vertical-align: top;
@@ -72,7 +69,7 @@
     }
 
     .tfFooterPanels p {
-      font-size: .75vw;
+      font-size: 1vw;
       text-align: center;
     }
 
@@ -80,6 +77,8 @@
       background-color: #f2f2f2; 
       padding-top: 50px;
       padding-bottom: 50px;
+      width: 30%;
+      text-align: center;
     }
 
     </style>
@@ -135,7 +134,7 @@
   <div class="tfThreePanels">
     <h1>Email<br />Support</h1>
     <p>We will reply <br />as soon as possible<br /></p>
-    <img src="/assets/images/content/CD_pages/email_icon.png" />
+    <img style="margin: 8.5px 0;" src="/assets/images/content/CD_pages/email_icon.png" />
     <br />
     <button class="contactButton">
       Submit Case
@@ -159,6 +158,7 @@
       800-750-8783
     </button>
   </div>
+  <span class="stretch"></span>
 </div>
   
 </section>
