--- a/Landing Pages/faq.html
+++ b/Landing Pages/faq.html
@@ -2,19 +2,38 @@
 <title>True Fabrications | F.A.Q.</title>
 <link rel="stylesheet" href="/assets/tf-styles/landingPages.css"></link>
 
-
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+
 </head>
+<style>
+
+
+@import url(http://fonts.googleapis.com/css?family=Montserrat);
+@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:300,400);
+
+</style>
 <body>
 <div class="tfBodyText">
-<section id="faq" style="max-width: 500px;">
+  <div id="sidebar">
+    <ul>
+      <a href="/faq"><li>FAQ</li></a>
+      <li><span class="seperator"></span></li>
+      <a href="/shipping"><li>Shipping & Deliveries</li></a>
+      <li><span class="seperator"></span></li>
+      <a href="/returns"><li>Returns & Exchanges</li></a>
+      <li><span class="seperator"></span></li>
+    </ul>
+  </div>
+  <section id="faq">
 
-<h2>Frequently Asked Questions</h2>
+  <h2 style="margin-bottom: 0px;">Frequently Asked Questions</h2>
+  <h5>SHOPPING INFORMATION</h5>
 
   <h6>Okay, I've braced myself - What are your minimums?</h6>
   <p>True has no minimum order requirements.</p>
 
-  <h6>No minimumns?  Really?</h6>
+  <h6>No minimums?  Really?</h6>
   <p>Really!  No minimums.</p>
 
   <h6>Wait, that's awesome.  But do I have to order the entire case-pack?</h6>
@@ -26,11 +45,16 @@
   <h6>What does "bulk" mean?</h6>
   <p>Bulk doesn't mean a large volume: bulk products are simply shipped without any sort of retail packaging like boxes or blister cards.  These items generally just come with a barcode sticker or hangtag.</p>
 
+  <h6>Can I order only the green <a href="/Assorted-Wine-Stoppers">Bruce</a>?</h6>
+  <p>On products we sell in assortments, you cannot order just one color or design.  We do this to help keep all colors and designs equally available and in stock.  When we choose to sell in assortments, it is where we've found that customers respond well to the variety.  We welcome your comments, which we take into constant account in making changes and future product decisions, so please do not hesitate to share any and all feedback with us.</p>
+
   <h6>I love this product!  What's it made of?</h6>
   <p>Materials are listed on every product's page on the website.  If for some reason a material isn't noted or if you'd like more specifics, you need only ask.</p>
   
   <h6>How do I edit my cart?</h6>
   <p>It's easy!  Click on the cart button on the top right of the page and select "View Cart." You'll have multiple options, including editing.</p>
+
+  <h5>SHIPPING & DELIVERIES</h5>
  
   <h6>I need my order, like, now.  How soon can you send it?</h6>
   <p>Place your order before 3pm Pacific Time and we'll ship it the same day from beautiful Seattle, Washington.  Boom.  And everything placed after 3pm will ship first thing in the morning.</p>
@@ -53,18 +77,7 @@
   <h6>Do I have to pay for backorder shipping?</h6>
   <p>Nope, we've got it.</p>
 
-  <h6>How many office dogs do you have?</h6>
-  <p>About ten, all vying for the cutest.</p>
-
-  <h6>I want to learn more about True.  Also, the industry in general.  Also your office dogs.  Can I do all that?</h6>
-  <p>Of course - check out our <a href="http://truefabrications.com/blog/">blog</a>.  You can also keep up with us on <a href="https://www.facebook.com/truefabrications">Facebook</a>, <a href="https://twitter.com/truefabrication">Twitter</a> and <a href="http://instagram.com/true.fab">Instagram</a>.</p>
-
-  <h6>What is your policy regarding online resale?</h6>
-  <p>We enforce MAP in order to protect our prices and vendors.  If you're interested in selling online, just give us a call!</p>
-
-  <h6>Can I order only the green <a href="tf.production.na1.netsuitestaging.com/Assorted-Wine-Stoppers">Bruce</a>?</h6>
-  <p>On products we sell in assortments, you cannot order just one color or design.  We do this to help keep all colors and designs equally available and in stock.  When we choose to sell in assortments, it is where we've found that customers respond well to the variety.  We welcome your comments, which we take into constant account in making changes and future product decisions, so please do not hesitate to share any and all feedback with us.</p>
-
+  <h5>RETURNS & EXCHANGES</h5>
   <h6>How do I return an item?</h6>
   <p>It's super-easy.  Send an email to <a href="mailto:info@truefabrications.com">info@truefabrications.com</a> and we'll take care of the rest - including the shipping.</p>
 
@@ -77,6 +90,18 @@
   <p>"because it's cloudy and also a Tuesday."</p>
   <p>"I don't really have a reason."</p>
   <p>We accept returns and exchanges at any time with no questions asked.  And if a product doesn't sell at your store, for any reason, we'll buy it back and replace it with something that will.  Believe us when we say it: your satisfaction is our highest priority.</p>
+
+  <h5>MORE ABOUT TRUE</h5>
+
+  <h6>How many office dogs do you have?</h6>
+  <p>About ten, all vying for the cutest.</p>
+
+  <h6>I want to learn more about True.  Also, the industry in general.</h6>
+  <h6>Also your office dogs.  Can I do all that?</h6>
+  <p>Of course - check out our <a href="http://truefabrications.com/blog/">blog</a>.  You can also keep up with us on <a href="https://www.facebook.com/truefabrications">Facebook</a>, <a href="https://twitter.com/truefabrication">Twitter</a> and <a href="http://instagram.com/true.fab">Instagram</a>.</p>
+
+  <h6>What is your policy regarding online resale?</h6>
+  <p>We enforce MAP in order to protect our prices and vendors.  If you're interested in selling online, just give us a call!</p>
 </section>
 </div>
 </body>
