--- a/Landing Pages/guarantee.html
+++ b/Landing Pages/guarantee.html
@@ -1,7 +1,5 @@
 <head>
-<title>
-True Fabrications | Guarantees
-</title>
+
 <link rel="stylesheet" href="/assets/tf-styles/landingPages.css"></link>
 
 
@@ -9,32 +7,21 @@ True Fabrications | Guarantees
 
 <style type="text/css">
 
-#guaranteeContainer{
-  width: 100%;
-  display: inline-block;
-  text-align: center;
-}
-
-.innerGuarantee{
-  vertical-align: top;
-  width: 18%;
-  min-width: 150px;
-  display: inline-block;
-}
-
-.innerGuarantee img{
+.tfFourPanels img{
   width: 80%;
 }
 
-.innerGuarantee p{
+.tfFourPanels p{
   padding-left: 10%;
   width: 80%;
 }
 
-.innerGuarantee h3{
+.tfFourPanels h3{
   padding-left: 10%;
   width: 80%;
 }
+
+
 
 </style>
 
@@ -46,7 +33,7 @@ True Fabrications | Guarantees
 
 <!-- About Header -->
 <div class="aboutHeader">
-  <h2 style="text-align: center;">About True Fabrications</h2>
+  <h2 style="text-align: center;"><a href="/about">About True Fabrications</a></h2>
   <nav>
     <ul>
     <a href="/who" style="color:#BBBBBB;"><li class="whoLink">WHO WE ARE</li></a><a href="/guarantee"><li class="guaranteeLink" style="margin-left: 10%; margin-right: 10%;">OUR GUARANTEES</li></a><a href="/about-brands" style="color:#BBBBBB;"><li class="brandsLink">OUR BRANDS</li></a>
@@ -56,32 +43,28 @@ True Fabrications | Guarantees
 <!-- End Header -->
 
 
-<div id="guaranteeContainer">
-	<div class="innerGuarantee">
-    <img src="/assets/images/content/CD_pages/100Satisfaction_Icon.png" />
-    <h3>100% satisfaction</h3>
-    <p>We stand behind every single one of our products with a 100% satiscaction policy unmatched in the industry.  Not only do we accept returns and exchanges without question, we will buy back any item that doesn't sell in your store, no matter the reason, and replace it with something that will.  What's more?  We'll pay the shipping.</p>
-	</div>
-	<div class="innerGuarantee">
+<div class="tfPanelsContainer">
+	<div class="tfFourPanels">
     <img src="/assets/images/content/CD_pages/BestPrice_Icon.png" />
     <h3>Best Price</h3>
     <p>We guarantee our customers the best of the best, at the best price on the market.  If you see the same product offered anywhere else for less, that's the price you'll pay with us.</p>
 	</div>
-	<div class="innerGuarantee">
+	<div class="tfFourPanels">
     <img src="/assets/images/content/CD_pages/FastShipping_Icon.png" />
     <h3>Same-Day Shipping</h3>
     <p>We strive to make ordering from True Fabrications as fast and easy as possible.  Place your order before 3:00 PM Pacific Time and we&#39ll ship it the same day.</p>
 	</div>
-	<div class="innerGuarantee">
+	<div class="tfFourPanels">
     <img src="/assets/images/content/CD_pages/FreeBackorders_Icon.png" />
     <h3>Free Backorder Shipping</h3>
     <p>True Fabrications has an average in-stock rate of 98% on over 2,000 items.  If you happen to order an item that's out of stock, we'll ship it directly to you the moment that it's back in our warehouse, free of charge.</p>
 	</div>
-	<div class="innerGuarantee">
+	<div class="tfFourPanels">
     <img src="/assets/images/content/CD_pages/NoMinimums_Icon.png" />
     <h3>No Minimums</h3>
     <p>Our no minimum policy gives customers the flexibility to try out new or popular products online 24 hours a day.</p>
 	</div>
+  <span class="stretch"></span>
 </div>
 </section>
 </div>
