--- a/Landing Pages/merchandising.html
+++ b/Landing Pages/merchandising.html
@@ -1,20 +1,117 @@
 <head>
-<title>True Fabrications | Merchandising</title>
+
+/* ---
+
+   _                  
+ _| |_ _ __ _   _  ___ ®
+|_   _| '__| | | |/ _ \
+  | |_| |  | |_| |  __/
+   \__|_|   \__,_|\___|
+
+F A B R I C A T I O N S                
+
+
+--- */
+
 <link rel="stylesheet" href="/assets/tf-styles/landingPages.css"></link>
 
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-</head>
+
+<style>
+
+<style>
+.tfPanelsContainer
+{
+  text-size: 1em;
+}
+
+.tfThreePanels img:hover{
+  opacity: 0.85;
+  filter: alpha(opacity=85);
+  -o-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+}
+
+.btn-shop {
+color: #fff !important;
+display: inline-block;
+position: relative;
+border: none;
+font-family: 'Nunito', "Helvetica Neue",Arial,Helvetica,sans-serif;
+font-size: 16px;
+line-height: 1.6875;
+font-weight: bold;
+text-align: center;
+letter-spacing: .02em;
+text-decoration: none;
+padding: 0.57143em 1.42857em;
+max-width: 100%;
+-webkit-font-smoothing: antialiased;
+-webkit-border-radius: 4px 4px 4px 4px;
+-moz-border-radius: 4px 4px 4px 4px;
+border-radius: 4px 4px 4px 4px;
+-o-transition: all 0.2s ease;
+-moz-transition: all 0.2s ease;
+-webkit-transition: all 0.2s ease;
+transition: all 0.2s ease;
+background: #B7B7B7;
+}
+.btn-shop:hover {
+  opacity: 0.85;
+  filter: alpha(opacity=85);
+  -o-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+
+}
+
+</style>
+
 <body>
 <div class="tfBodyText">
-<section id="merchandising">
+<section id="Merchandising">
 
-<p>True Fabrications carries over 350 unique products that can be imprinted for your store, business, or event. Whether you're on the market for promotional products, merchandise that adds value to your brand, or gifts for an ucoming event, we are here to help you with all of your needs. Don't have a logo? Our graphics team will help you create one!</p>
-<p>We will email you a proof and total estimate within 48 hours! Please note that you are only submitting a request - your imprint will NOT go into production until you approve the proof. Feel free to check the customization section of our catalog for full pricing.</p>
-
-<p>For Questions, <BR><br>Call us at (800) 750-8783 | Email us at <a href="mailto:info@truefabrications.com">info@truefabrications.com</a><BR><br></p>   
-<div class="cont-cells"> <div class="row-fluid"> 
-<div class="span4"><a href="/Merchandising/Counter-Top-Displays" data-hashtag="#/Merchandising/Counter-Top-Displays"><img src="/assets/images/content/example_merch_counter.jpg">Counter Top Displays</a></div> 
-<div class="span4"><a href="/Merchandising/Floor-Displays" data-hashtag="#/Merchandising/Floor-Displays"><img src="/assets/images/content/example_merch_floor.jpg">Floor Displays</a></div> 
-<div class="span4"><a href="/Merchandising/Aisle-Displays" data-hashtag="#/Merchandising/Aisle-Displays"><img src="/assets/images/content/example_merch_air.jpg">Aisle Displays</a></div> </div> </div>
-</section></div></body>
+<h2 style="text-align: center">Merchandising With True Fabrications</h2>
+<div style="width: 80%; min-width: 300px; margin: auto;">
+<p style="text-align: center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+</p>
+</div>
+<div class="tfPanelsContainer" style="margin-top: 10px; padding-top: 20px; padding-bottom: 10px;">
+  <div style="width: 100%; margin: 0 auto;">
+	<div class="tfThreePanels" style="background-color: #f8f8f8;">
+  <div style="width: 90%; margin: 0 auto; margin-top: 5%; margin-bottom: 5%;">  
+    <a href="/Merchandising/Counter-Top-Displays"><img src="/assets/images/content/CD_pages/true_merchandising_counterdisplay.png" /></a>
+    <h4>Counter Displays</h4>
+    <p>American Apparel literally quinoa wolf, lomo PBR&B 90's fanny pack Portland mustache. VHS polaroid narwhal direct trade. Literally leggings asymmetrical sartorial tote bag. Pickled Thundercats authentic farm-to-table before they sold out.</p>
+    <a aria-label="Shop Counter Displays" class="btn-shop" href="/Merchandising/Counter-Top-Displays" role="button" style="background: #92D9F8;">Shop Counter Displays</a>
+    </div>
+	</div>
+  <div class="tfThreePanels" style="background-color: #f8f8f8; margin-left: 2%, margin-right: 2%;">
+    <div style="width: 90%; margin: 0 auto; margin-top: 5%; margin-bottom: 5%;">
+    <a href="/Merchandising/Floor-Displays"><img src="/assets/images/content/CD_pages/true_merchandising_floordisplay.png" /></a>
+    <h4>Floor Displays</h4>
+    <p>American Apparel literally quinoa wolf, lomo PBR&B 90's fanny pack Portland mustache. VHS polaroid narwhal direct trade. Literally leggings asymmetrical sartorial tote bag. Pickled Thundercats authentic farm-to-table before they sold out.</p>
+    <a aria-label="Shop Counter Displays" class="btn-shop" href="/Merchandising/Floor-Displays" role="button" style="background: #28c0d7;">Shop Floor Displays</a>
+  </div>
+  </div>
+  <div class="tfThreePanels" style="background-color: #f8f8f8;">
+    <div style="width: 90%; margin: 0 auto; margin-top: 5%; margin-bottom: 5%;">  
+    <a href="/Merchandising/Aisle-Displays"><img src="/assets/images/content/CD_pages/true_merchandising_aisledisplay.png" /></a>
+    <h4>Aisle Displays</h4>
+    <p>American Apparel literally quinoa wolf, lomo PBR&B 90's fanny pack Portland mustache. VHS polaroid narwhal direct trade. Literally leggings asymmetrical sartorial tote bag. Pickled Thundercats authentic farm-to-table before they sold out.</p>
+    <a aria-label="Shop Counter Displays" class="btn-shop" href="/Merchandising/Aisle-Displays" role="button" style="background: #b8cd32;">Shop Aisle Displays</a>
+  </div>
+  </div>
+    <span class="stretch"></span>
+  </div>
+</div>
+</section>
+</div>
+</body>
