--- a/Landing Pages/returns.html
+++ b/Landing Pages/returns.html
@@ -1,77 +1,42 @@
 <head>
-<title>
-True Fabrications | Returns & Exchanges
-</title>
+<title>True Fabrications | Returns & Exchanges</title>
 <link rel="stylesheet" href="/assets/tf-styles/landingPages.css"></link>
 
-
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-
-<style type="text/css">
-
-#returnsContainer{
-  width: 100%;
-  display: inline-block;
-  text-align: center;
-}
-
-.innerReturns{
-  vertical-align: top;
-  width: 18%;
-  min-width: 150px;
-  display: inline-block;
-}
-
-.innerReturns img{
-  width: 80%;
-}
-
-.innerReturns p{
-  padding-left: 10%;
-  width: 80%;
-}
-
-.innerReturns h3{
-  padding-left: 10%;
-  width: 80%;
-}
-
-</style>
-
+<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 
 </head>
+<style>
+
+@import url(http://fonts.googleapis.com/css?family=Montserrat);
+@import url(http://fonts.googleapis.com/css?family=Oswald);
+
+
+
+</style>
 <body>
 <div class="tfBodyText">
-<section id="returns">
-<h2 id="returns">Returns & Exchanges</h2>
+  <div id="sidebar">
+    <ul>
+      <a href="/faq"><li>FAQ</li></a>
+      <li><span class="seperator"></span></li>
+      <a href="/shipping"><li>Shipping & Deliveries</li></a>
+      <li><span class="seperator"></span></li>
+      <a href="/returns"><li>Returns & Exchanges</li></a>
+      <li><span class="seperator"></span></li>
+    </ul>
+  </div>
+  <section id="returns">
 
-<div id="returnsContainer">
-	<div class="innerReturns">
-    <img src="/assets/images/content/CD_pages/100Satisfaction_Icon.png" />
-    <h3>Give us a call or email</h3>
-	</div>
-	<div class="innerReturns">
-    <img src="/assets/images/content/CD_pages/BestPrice_Icon.png" />
-    <h3>Receive call tag</h3>
-	</div>
-	<div class="innerReturns">
-    <img src="/assets/images/content/CD_pages/FastShipping_Icon.png" />
-    <h3>Put product into a box</h3>
-	</div>
-	<div class="innerReturns">
-    <img src="/assets/images/content/CD_pages/FreeBackorders_Icon.png" />
-    <h3>Ship box back (using pre-paid call tag)</h3>
-	</div>
-	<div class="innerReturns">
-    <img src="/assets/images/content/CD_pages/NoMinimums_Icon.png" />
-    <h3>Receive Credit</h3>
-	</div>
-
-	<p>We dedicate ourselves to the customer experience with a 100% Satisfaction Guarantee unmatched in the industry.  If your product was damaged in shipping, has a quality issue, or isn't selling as quickly as you'd hoped - even if you simply changed your  mind about it - we'll take it back without question and replace it with something better.  Just log into your account and fill out the return from and one of our team members will be in touch with you shortly.  If immediate assistance is more convenient for you, please feel free to chat with us live or give us a call at 800.750.8783.</p>
-<p>Please note that we take the quality of our products very seriously.  If you received a product with damage or a quality issue, we want to hear about it.  If possible, please attach a picture below to assist us in properly addressing the issue.</p>
-<br />
-
-
+  <h2>Returns & Exchanges</h2>
+  <p>We dedicate ourselves to the customer experience with a 100% Satisfaction Guarantee unmatched in the industry.  If your product was damaged in shipping, has a quality issue, or isn't selling as quickly as you'd hoped - even if you simply changed your  mind about it - we'll take it back without question and replace it with something better.  Just log into your account and fill out the return from and one of our team members will be in touch with you shortly.  If immediate assistance is more convenient for you, please feel free to chat with us live or give us a call at 800.750.8783.</p>
+  <p>Please note that we take the quality of our products very seriously.  If you received a product with damage or a quality issue, we want to hear about it.  If possible, please attach a picture below to assist us in properly addressing the issue.</p>
+  <br />
+<h2>We Make Returns Easy</h2>
+<div style="width: 100%;">
+<img src="/assets/images/content/CD_pages/true_returns_callus.png" style="width: 31%; margin-right: 2%"/>
+<img src="/assets/images/content/CD_pages/true_returns_calltag.png" style="width: 31%;"/>
+<img src="/assets/images/content/CD_pages/true_returns_freeship.png" style="width: 31%; margin-left: 2%"/>
 </div>
 </section>
 </div>
