--- a/Landing Pages/shipping_and_deliveries.html
+++ b/Landing Pages/shipping_and_deliveries.html
@@ -4,25 +4,38 @@
 
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+
+<style type="text/css">
+
+
+</style>
+
 </head>
+
 <body>
 <div class="tfBodyText">
-<section id="shipping">
+  <div id="sidebar">
+    <ul>
+      <a href="/faq"><li>FAQ</li></a>
+      <li><span class="seperator"></span></li>
+      <a href="/shipping"><li>Shipping & Deliveries</li></a>
+      <li><span class="seperator"></span></li>
+      <a href="/returns"><li>Returns & Exchanges</li></a>
+      <li><span class="seperator"></span></li>
+    </ul>
+  </div>
+  <section id="shipping">
 
+  <h2>Shipping & Deliveries</h2>
 
-<h2 id="shipping">Shipping & Deliveries</h2>
+  <h3>Same-Day Shipping</h3>
+  <p>We strive to make ordering from True Fabrications as fast and easy as possible.  Place your order before 3:00 PM Pacific Time and we&#39ll ship it the same day.</p>
 
+  <h3>Free Backorder Shipping</h3>
+  <p>True Fabrications has an average in-stock rate of 98% on over 2,000 items.  If you happen to order an item that's out of stock we'll ship it directly to you the moment that it's back in our warehouse, free of charge.</p>
 
-
-<h3>Same-Day Shipping</h3>
-<p>We strive to make ordering from True Fabrications as fast and easy as possible.  Place your order before 3:00 PM Pacific Time and we&#39ll ship it the same day.</p>
-
-<h3>Free Backorder Shipping</h3>
-<p>True Fabrications has an average in-stock rate of 98% on over 2,000 items.  If you happen to order an item that's out of stock we'll ship it directly to you the moment that it's back in our warehouse, free of charge.</p>
-
-<h3>Shipping Times</h3>
-<p>Shipping times will vary depending on your location. The majority of the Pacific Northwest will receive their order the next day, most of the Southwest will receive their order in two business days, the Midwest in three to four business days, and the Eastern Seaboard in five business days. Naturally, inclement weather and other circumstances beyond our control can delay shipping. You can check out estimates specific to your zip code with <a href="http://www.ups.com/maps/results">this map</a> provided by UPS, which we use for most of our shipments (note that we ship from zip code 98057). We're also happy to provide tracking for any order - just give us a call!</p>
-
+  <h3>Shipping Times</h3>
+  <p>Shipping times will vary depending on your location. The majority of the Pacific Northwest will receive their order the next day, most of the Southwest will receive their order in two business days, the Midwest in three to four business days, and the Eastern Seaboard in five business days. Naturally, inclement weather and other circumstances beyond our control can delay shipping. You can check out estimates specific to your zip code with <a href="http://www.ups.com/maps/results">this map</a> provided by UPS, which we use for most of our shipments (note that we ship from zip code 98057). We're also happy to provide tracking for any order - just give us a call!</p>
 </section>
 </div>
 </body>
