--- a/Landing Pages/responseReceived.html
+++ b/Landing Pages/responseReceived.html
@@ -1,16 +1,24 @@
 <head>
-<title>True Fabrications | Your Response Has Been Received</title>
 <link rel="stylesheet" href="/assets/tf-styles/landingPages.css"></link>
 
 
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+<style type="text/css">
+	
+.tfBodyText{
+	margin: 0px 15%;
+  border: solid 1px #777777;
+  padding: 5%;
+}
+
+</style>
 </head>
 <body>
 <div class="tfBodyText">
-<h2>Thank you for your response.&nbsp;</h2><p>You will be redirected to the True Fabrications home page momentarily.<br></p>
+<h1>Thank you for your response.&nbsp;</h1><p>You will be redirected to the True Fabrications home page momentarily.<br></p>
 
 <script>
-	setTimeout(function(){window.location.href='http://www.truefabrications.com/Default.asp'},20000);
+	setTimeout(function(){window.location.href='/'},10000);
 </script>
 
 </div>
