--- a/Landing Pages/catalog.html
+++ b/Landing Pages/catalog.html
@@ -1,16 +1,18 @@
 <head>
-<title>True Fabrications | Returns & Exchanges</title>
+<title>True Fabrications | Catalogs</title>
 <link rel="stylesheet" href="/assets/tf-styles/landingPages.css"></link>
 <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 <style type="text/css">
 
+@import url(http://fonts.googleapis.com/css?family=Montserrat);
+
 .catalogRow{
-	height: 300px;
-	width: 100%;
-	min-width: 300px;
+  height: 300px;
+  width: 100%;
+  min-width: 300px;
   margin-left: auto;
   margin-right: auto;
-}	
+} 
 
 .catalogImage{
   width: 30%;
@@ -31,12 +33,12 @@
 
 
 .catalogRow img{
-	margin-right: 25px;
+  margin-right: 25px;
   position: relative;
 }
 
 .catalogRow h1{
-	margin: 10px;
+  margin: 10px;
   margin-top: 0px;
   vertical-align: top;
   font-size: 1.5em;
@@ -50,9 +52,12 @@
 }
 
 .catalogRow p{
-	margin: 10px;
+  margin: 10px;
   vertical-align: top;
   white-space: normal;
+}
+
+.catalogRow a{
 }
 
 .catalogRow ul{
@@ -76,14 +81,17 @@
     display: block;
     float: left;
     margin-right: 24px;
+
   }
 
     .otherCatalogs li:last-child {
       margin-right: 0;
+  
     }
     
     .otherCatalogs li a {
       text-align: center;
+  
     }
 
     .otherCatalogs li a img {
@@ -100,77 +108,65 @@
 <div class="tfBodyText">
 <section id="catalog">
 
-  <div class="catalogRow">
-    <div class="catalogImage">
-  	 <a href="http://catalog.truefabrications.com/pdf/viewer/?file=../spring2015.pdf"><img src="http://www.truefabrications.com/catalog/web_cover_S15.jpg" style="border: solid 2px #c3c3c3;" /></a>
-    </div>
-    <div class="catalogText">
-     <h1>The <span class="catalogName">SPRING 2015 CATALOG</span> is here!</h1>
-     <p>Spring has sprung at True Fabrications! Check out over 200 new products, curated collections, and everyday essentials in the 2015 Spring Catalog.</p>
-     <h2>Get Yours:</h2>
-      <ul>
-        <li><a href="http://catalog.truefabrications.com/pdf/viewer/?file=../spring2015.pdf">View Online</a></li>
-        <li><a href="http://catalog.truefabrications.com/pdf/spring2015.pdf">Download (PDF)</a></li>
-        <li><a href="http://www.truefabrications.com/requestcatalog.asp">Request a Copy (via US Mail)</a></li>
-      </ul>
+<div class="tfPanelsContainer" style="margin-top: 10px; padding-bottom: 10px;">
+  <h2 style="text-align: center;">Featured Catalogs</h2>
+  <div style="width: 100%; margin: 0 auto;">
+  <div class="tfThreePanels" style="background-color: #f8f8f8;">
+  <div style="width: 90%; margin: 0 auto; margin-top: 5%; margin-bottom: 5%;">  
+    <a href="http://catalog.truefabrications.com/pdf/viewer/?file=../spring2015.pdf"><img src="/assets/images/content/CD_pages/true_catalog_spring15.png" /></a>
+    <h4>Spring 2015 Catalog</h4>
+    <p>Spring has sprung at True Fabrications! Check out over 200 new products, curated collections, and everyday essentials in the 2015 Spring Catalog.</p>
+    <a href="http://catalog.truefabrications.com/pdf/viewer/?file=../spring2015.pdf">view it now</a> |
+    <a href="http://catalog.truefabrications.com/pdf/spring2015.pdf">download</a> |
+    <a href="http://www.truefabrications.com/requestcatalog.asp">request a copy</a>
     </div>
   </div>
-
-  <div class="catalogRow">
-    <div class="catalogImage">
-     <a href="http://catalog.truefabrications.com/pdf/viewer/?file=../HOST_2014.pdf"><img src="http://www.truefabrications.com/catalog/host14.gif" style="margin-top: -7px;" /></a>
-    </div>
-    <div class="catalogText">
-     <h1>The <span class="catalogName">Host 2014 CATALOG</span> is also here!</h1>
-     <h2>Get Yours:</h2>
-      <ul>
-        <li><a href="http://catalog.truefabrications.com/pdf/viewer/?file=../HOST_2014.pdf">View Online</a></li>
-        <li><a href="http://catalog.truefabrications.com/pdf/HOST_2014.pdf">Download (PDF)</a></li>
-      </ul>
-    </div>
+  <div class="tfThreePanels" style="margin-left: 2%; margin-right: 2%; background-color: #f8f8f8;">
+    <div style="width: 90%; margin: 0 auto; margin-top: 5%; margin-bottom: 5%;">
+    <a href="http://catalog.truefabrications.com/pdf/viewer/?file=../HOST_2014.pdf"><img src="/assets/images/content/CD_pages/true_catalog_host14.png" /></a>
+    <h4>Host 2014 Catalog</h4>
+    <p>Spring has sprung at True Fabrications! Check out over 200 new products, curated collections, and everyday essentials in the 2015 Spring Catalog.</p>
+    <a href="http://catalog.truefabrications.com/pdf/viewer/?file=../HOST_2014.pdf">view it now</a> |
+    <a href="http://catalog.truefabrications.com/pdf/HOST_2014.pdf">download</a> |
+    <a href="http://www.truefabrications.com/requestcatalog.asp">request a copy</a>
+  </div>
+  </div>
+  <div class="tfThreePanels" style="background-color: #f8f8f8;">
+    <div style="width: 90%; margin: 0 auto; margin-top: 5%; margin-bottom: 5%;">  
+    <a href="http://catalog.truefabrications.com/pdf/viewer/?file=../spring2015.pdf"><img src="/assets/images/content/CD_pages/true_catalog_twine14.png" /></a>
+    <h4>Twine 2014 Catalog</h4>
+    <p>Gifts and homegoods that capture the essence of living with rustic elegance - shop by collection to create your own experience.</p>
+    <a href="http://catalog.truefabrications.com/pdf/viewer/?file=../spring2015.pdf">view it now</a> | 
+    <a href="http://catalog.truefabrications.com/pdf/viewer/?file=../spring2015.pdf">download</a> | 
+    <a href="http://www.truefabrications.com/requestcatalog.asp">request a copy</a>
+  </div>
   </div>
 
-  <div class="catalogRow">
-    <div class="catalogImage">
-     <a href="http://catalog.truefabrications.com/pdf/viewer/?file=../twinecatalog.pdf"><img src="http://www.truefabrications.com/catalog/twine14.jpg" /></a>
-    </div>
-    <div class="catalogText">
-     <h1>The <span class="catalogName">Summer 2014 CATALOG</span> is here!</h1>
-     <p>Twine makes market trends accessible through unique products that evoke a feeling of finding a hidden treasure. Buy a whole collection or select pieces from each to create an experience all your own.</p>
-     <h2>Get Yours:</h2>
-      <ul>
-        <li><a href="http://catalog.truefabrications.com/pdf/viewer/?file=../twinecatalog.pdf">View Online</a></li>
-        <li><a href="http://catalog.truefabrications.com/pdf/twinecatalog.pdf">Download (PDF)</a></li>
-        <li><a href="http://www.truefabrications.com/requestcatalog.asp">Request a Copy (via US Mail)</a></li>
-      </ul>
-    </div>
-  </div>
-
-  <ul class="otherCatalogs">
+  <ul class="otherCatalogs" style="margin-top: 30px; font-family: Montserrat, sans-serif;">
   <h2>View Other Catalogs</h2>
     <li><a href="http://catalog.truefabrications.com/pdf/viewer/?file=../ValentinesDay2015.pdf">
       <img src="http://www.truefabrications.com/catalog/VDay2015_WebCover.jpg" />
-      <p>Valentine 2015</p>
+      <p style="font-family: 'Montserrat', sans-serif;">Valentine 2015</p>
     </a></li>
     <li><a href="http://catalog.truefabrications.com/pdf/viewer/?file=../TrueBrewNew.pdf">
       <img src="http://www.truefabrications.com/catalog/brewery.jpg" />
-      <p>Beer Accessories</p>
+      <p style="font-family: 'Montserrat', sans-serif;">Beer Accessories</p>
     </a></li>
     <li><a href="http://catalog.truefabrications.com/pdf/viewer/?file=../customization_2014.pdf">
       <img src="http://www.truefabrications.com/images/customization_guide_icon.gif" style="margin-left: 10px;" />
-      <p>Customization Guide</p>
+      <p style="font-family: 'Montserrat', sans-serif;">Customization Guide</p>
     </a></li>
     <li><a href="http://catalog.truefabrications.com/pdf/viewer/?file=../Wine_Spirit_2014.pdf">
       <img src="http://www.truefabrications.com/catalog/wss2014.jpg" />
-      <p>Wine & Spirit</p>
+      <p style="font-family: 'Montserrat', sans-serif;">Wine & Spirit</p>
     </a></li>
     <li><a href="http://catalog.truefabrications.com/pdf/viewer/?file=../holiday2014.pdf">
       <img src="http://www.truefabrications.com/catalog/holidayleaflet.jpg" />
-      <p>Holiday Leaflet</p>
+      <p style="font-family: 'Montserrat', sans-serif;">Holiday Leaflet</p>
     </a></li>
     <li><a href="http://catalog.truefabrications.com/pdf/viewer/?file=../PackageDeal2014.pdf">
       <img src="http://www.truefabrications.com/catalog/PACKAGE_DEALS_webcover.jpg" />
-      <p>Package Deals</p>
+      <p style="font-family: 'Montserrat', sans-serif;">Package Deals</p>
     </a></li>
   </ul>
 
